Fix wrapping chevron safari issue

--- a/media/css/m24/components/navigation-refresh.scss
+++ b/media/css/m24/components/navigation-refresh.scss
@@ -347,6 +347,7 @@ $margin-top: 58px; // top margin offset for mobile navigation menu
 
         h2 {
             font-weight: inherit;
+            white-space: nowrap; // fix safari bug, issue #309
         }
     }
 }
